p2ws_package/Devpp2ws-Package/objects/Case_Status_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Mobile_App_Type__c</fullName>
        <label>Mobile App Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-flight</fullName>
                    <default>true</default>
                    <label>In-flight</label>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_App_Value__c</fullName>
        <description>Value in Mobile App</description>
        <label>Mobile App Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Value__c</fullName>
        <description>Value in SFDC</description>
        <label>SFDC Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Status Mapping</label>
    <pluralLabel>Case Status Mapping</pluralLabel>
</CustomObject>